cabal-version: 2.2
name:
  vector-circular
version:
  0.1
-- synopsis:
-- description:
bug-reports:
  https://github.com/chessai/vector-circular.git
license:
  MIT
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
build-type:
  Simple
extra-source-files:
  changelog.md
  readme.md

library
  hs-source-dirs:
    src
  exposed-modules:
    Data.Vector.Circular
  build-depends:
    , base >= 4.11 && < 4.14
    , vector
  ghc-options:
    -Wall -O2
  default-language:
    Haskell2010
